methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:1: error: Missing closing brace `}' assumed here
def faireFleur(c:Color) { 
^FlowerCase:1: error: expected class or object definition
def faireFleur(c:Color) { 
^FlowerCase:18: error: expected class or object definition
def growFlowers() {
^