methods.flowerpot.FlowerCase.scala.code
def faireFleur(c:Color) { 
  setCouleurBrosse(c:Color)
  baisseBrosse()
  avance()
  avance()
  recule()
  gauche()
  avance()
  recule()
	recule()
  avance()
  setCouleurBrosse(Color.YELLOW)
  droite()
  leveBrosse()
  avance()
  }

def growFlowers() {
  faireFleur(Color.RED)
  avance()
  avance()
  faireFleur(Color.CYAN)
  droite()
  avance()
  avance()
  droite()
  avance()
  avance()
  faireFleur(Color.ORANGE)
  avance()
  avance()
  gauche()
  avance()
  avance()
  gauche()
  faireFleur(Color.PINK)
  avance()
  avance()
  faireFleur(Color.GREEN)
  for(i<-1 to 6) {
    recule()
  }